src/test/ui/impl-trait/bindings-opaque.stderr
error[E0599]: no method named `count_ones` found for type `impl std::marker::Copy` in the current scope
  --> $DIR/bindings-opaque.rs:10:17
   |
LL |     let _ = FOO.count_ones();
   |                 ^^^^^^^^^^

error[E0599]: no method named `count_ones` found for type `impl std::marker::Copy` in the current scope
  --> $DIR/bindings-opaque.rs:12:17
   |
LL |     let _ = BAR.count_ones();
   |                 ^^^^^^^^^^

error[E0599]: no method named `count_ones` found for type `impl std::marker::Copy` in the current scope
  --> $DIR/bindings-opaque.rs:14:17
   |
LL |     let _ = foo.count_ones();
   |                 ^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0599`.
